--- a/templates/index.html
+++ b/templates/index.html
@@ -21,24 +21,24 @@
         {% else %}
         <div id="p2-pits" >
         {% endif %}
-          <a href="/select/user/2/pit/5"><div id="p2-6" class="pit"> {{ p2_6 }} </div></a>
-          <a href="/select/user/2/pit/4"><div id="p2-5" class="pit"> {{ p2_5 }} </div></a>
-          <a href="/select/user/2/pit/3"><div id="p2-4" class="pit"> {{ p2_4 }} </div></a>
-          <a href="/select/user/2/pit/2"><div id="p2-3" class="pit"> {{ p2_3 }} </div></a>
-          <a href="/select/user/2/pit/1"><div id="p2-2" class="pit"> {{ p2_2 }} </div></a>
-          <a href="/select/user/2/pit/0"><div id="p2-1" class="pit"> {{ p2_1 }} </div></a>
+          <a href="/select?user_id=2&pit=5"><div id="p2-6" class="pit"> {{ p2_6 }} </div></a>
+          <a href="/select?user_id=2&pit=4"><div id="p2-5" class="pit"> {{ p2_5 }} </div></a>
+          <a href="/select?user_id=2&pit=3"><div id="p2-4" class="pit"> {{ p2_4 }} </div></a>
+          <a href="/select?user_id=2&pit=2"><div id="p2-3" class="pit"> {{ p2_3 }} </div></a>
+          <a href="/select?user_id=2&pit=1"><div id="p2-2" class="pit"> {{ p2_2 }} </div></a>
+          <a href="/select?user_id=2&pit=0"><div id="p2-1" class="pit"> {{ p2_1 }} </div></a>
         </div>
         {% if turn == 0 %}
         <div id="p1-pits-selected">
         {% else %}
         <div id="p1-pits" >
         {% endif %}
-          <a href="/select/user/1/pit/0"><div id="p1-1" class="pit"> {{ p1_1 }} </div></a>
-          <a href="/select/user/1/pit/1"><div id="p1-2" class="pit"> {{ p1_2 }} </div></a>
-          <a href="/select/user/1/pit/2"><div id="p1-3" class="pit"> {{ p1_3 }} </div></a>
-          <a href="/select/user/1/pit/3"><div id="p1-4" class="pit"> {{ p1_4 }} </div></a>
-          <a href="/select/user/1/pit/4"><div id="p1-5" class="pit"> {{ p1_5 }} </div></a>
-          <a href="/select/user/1/pit/5"><div id="p1-6" class="pit"> {{ p1_6 }} </div></a>
+          <a href="/select?user_id=1&pit=0"><div id="p1-1" class="pit"> {{ p1_1 }} </div></a>
+          <a href="/select?user_id=1&pit=1"><div id="p1-2" class="pit"> {{ p1_2 }} </div></a>
+          <a href="/select?user_id=1&pit=2"><div id="p1-3" class="pit"> {{ p1_3 }} </div></a>
+          <a href="/select?user_id=1&pit=3"><div id="p1-4" class="pit"> {{ p1_4 }} </div></a>
+          <a href="/select?user_id=1&pit=4"><div id="p1-5" class="pit"> {{ p1_5 }} </div></a>
+          <a href="/select?user_id=1&pit=5"><div id="p1-6" class="pit"> {{ p1_6 }} </div></a>
         </div>
       </div>
 
