--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
 </head>
 
-<body class="square-grid">
+<body class="background">
   <div id="container">
     <div id="main-board">
 
