--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <div id="main-board">
 
       <div id="p2-big-pit" class="big-pit">
-        <div class="big-pit-value">{{ p2_big_pit_value }}</div>
+        <div class="big-pit-value">{{ players[1].big_pit }}</div>
         <div id="p2-pit-name">Player 2</div>
       </div>
 
@@ -21,36 +21,30 @@
         {% else %}
         <div id="p2-pits" >
         {% endif %}
-          <a href="/select?user_id=2&pit=5"><div id="p2-6" class="pit"> {{ p2_6 }} </div></a>
-          <a href="/select?user_id=2&pit=4"><div id="p2-5" class="pit"> {{ p2_5 }} </div></a>
-          <a href="/select?user_id=2&pit=3"><div id="p2-4" class="pit"> {{ p2_4 }} </div></a>
-          <a href="/select?user_id=2&pit=2"><div id="p2-3" class="pit"> {{ p2_3 }} </div></a>
-          <a href="/select?user_id=2&pit=1"><div id="p2-2" class="pit"> {{ p2_2 }} </div></a>
-          <a href="/select?user_id=2&pit=0"><div id="p2-1" class="pit"> {{ p2_1 }} </div></a>
+          {% for pit in players[1].pits|reverse %}
+          <a href="/select?user_id=1&pit={{ 5 - loop.index0 }}"><div class="pit"> {{ pit }} </div></a>
+          {% endfor %}
         </div>
         {% if turn == 0 %}
         <div id="p1-pits-selected">
         {% else %}
         <div id="p1-pits" >
         {% endif %}
-          <a href="/select?user_id=1&pit=0"><div id="p1-1" class="pit"> {{ p1_1 }} </div></a>
-          <a href="/select?user_id=1&pit=1"><div id="p1-2" class="pit"> {{ p1_2 }} </div></a>
-          <a href="/select?user_id=1&pit=2"><div id="p1-3" class="pit"> {{ p1_3 }} </div></a>
-          <a href="/select?user_id=1&pit=3"><div id="p1-4" class="pit"> {{ p1_4 }} </div></a>
-          <a href="/select?user_id=1&pit=4"><div id="p1-5" class="pit"> {{ p1_5 }} </div></a>
-          <a href="/select?user_id=1&pit=5"><div id="p1-6" class="pit"> {{ p1_6 }} </div></a>
+          {% for pit in players[0].pits %}
+          <a href="/select?user_id=0&pit={{ loop.index0 }}"><div class="pit"> {{ pit }} </div></a>
+          {% endfor %}
         </div>
       </div>
 
       <div id="p1-big-pit" class="big-pit">
         <div id="p1-pit-name">Player 1</div>
-        <div class="big-pit-value">{{ p1_big_pit_value }}</div>
+        <div class="big-pit-value">{{ players[0].big_pit }}</div>
       </div>
 
     </div>
 
-    {% if winner > 0 %}
-    <div id="status"><p class="blinking">Winner: {{ winner }}</p></div>
+    {% if winner > -1 %}
+    <div id="status"><p class="blinking">Winner: Player {{ winner +1 }}</p></div>
     {% else %}
     {% set turn = turn + 1 %}
     <div id="status">Turn: Player{{ turn }}</div>
