--- a/static/style.css
+++ b/static/style.css
@@ -3,16 +3,17 @@
 }
 
 #container {
-    width: 1024px;
     margin: auto;
     padding: 20px;
     overflow: hidden;
+    text-align: center;
 }
 
 #main-board {
     border-radius: 25px;
     height: 400px;
-    width: 1024px;
+    display: inline-block;
+    overflow: auto;
     margin-bottom: 50px;
     margin-top: 100px;
     background-color: #855c46;
@@ -27,11 +28,11 @@
     margin-bottom: 20px;
     background-color: #fcf3dc;
     box-shadow: 10px 5px 10px #8c6954;
-    margin-left: 312px;
     text-align: center;
     line-height: 100px;
     font-size: 42px;
     font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
 }
 
 .big-pit {
@@ -41,18 +42,20 @@
     background-color: #2e1208;
     float:left;
     margin-left: 20px;
+    margin-right: 20px;
     margin-top: 20px;
 }
 
 #pits-container {
     height: 360px;
-    width: 700px;
+    display: inline-block;
     background-color: #2e1208;
-    overflow: hidden;
+    overflow: auto;
     margin-top: 20px;
-    margin-left: 40px;
+    margin-left: 20px;
     margin-right: 20px;
     float: left;
+    border-radius: 25px;
 }
 
 #p1-pit-name {
@@ -76,7 +79,6 @@
 
 #p2-pits {
     height: 160px;
-    width: 660px;
     overflow: hidden;
     margin-top: 10px;
     margin-left: 20px;
@@ -86,7 +88,6 @@
 
 #p1-pits {
     height: 160px;
-    width: 660px;
     overflow: hidden;
     margin-top: 20px;
     margin-left: 20px;
@@ -110,7 +111,8 @@
     line-height: 130px;
     float: left;
     margin-top: 15px;
-    margin-left: 15px;
+    margin-left: 7px;
+    margin-right: 7px;
 }
 
 #reset-button {
@@ -121,10 +123,9 @@
     text-align: center;
     line-height: 50px;
     margin-top: 50px;
-    margin-left: 412px;
     box-shadow: 5px 5px 10px #8c6954;
-    float: left;
     color: white;
+    display: inline-block;
 }
 
 a {
