--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,10 @@
       <div id="pits-container">
         <div id="p2-pits" class="{{ 'selected-pits' if turn == 1 }}">
           {% for pit in players[1].pits|reverse %}
-          <a href="/select?user_id=1&pit={{ 5 - loop.index0 }}"><div class="pit"> {{ pit }} </div></a>
+          <a href="/select?user_id=1&pit={{ players[1].pits|length - loop.index0 - 1}}"><div class="pit"> {{ pit }} </div></a>
           {% endfor %}
         </div>
+        <br />
         <div id="p1-pits" class="{{ 'selected-pits' if turn == 0 }}">
           {% for pit in players[0].pits %}
           <a href="/select?user_id=0&pit={{ loop.index0 }}"><div class="pit"> {{ pit }} </div></a>
@@ -34,6 +35,7 @@
       </div>
 
     </div>
+    <br />
 
     {% if winner > -1 %}
     <div id="status"><p class="blinking">Winner: Player {{ winner +1 }}</p></div>
@@ -41,6 +43,8 @@
     {% set turn = turn + 1 %}
     <div id="status">Turn: Player{{ turn }}</div>
     {% endif %}
+    <br />
+
     <a href="/reset"><div id="reset-button">Start again</div></a>
   </div>
 </body>
