--- a/static/style.css
+++ b/static/style.css
@@ -96,23 +96,24 @@
 }
 
 .selected-pits {
-    border-radius: 25px;
-    box-shadow: 0px 0px 0px 1px #e0e0e0;
+    border-radius: 30px;
+    box-shadow:
+    0 0 20px -8px #fcf6f0;
 }
 
 .pit {
     border-radius: 25px;
     color: white;
-    text-align: center;
     font-size: 24px;
     background-color: #855c46;
     width: 92px;
     height: 130px;
-    line-height: 130px;
+    line-height: 200px;
     float: left;
     margin-top: 15px;
     margin-left: 7px;
     margin-right: 7px;
+    box-shadow: inset -5px 0 5px rgba(0,0,0,0.9);
 }
 
 #reset-button {
@@ -136,6 +137,7 @@ a {
 .blinking {
     animation: opacity 2s ease-in-out infinite;
     opacity: 1;
+    margin: 0;
 }
 
 @keyframes opacity {
