--- a/static/new_style.css
+++ b/static/new_style.css
@@ -71,7 +71,11 @@
     border-radius: 10px;
     width: 120px;
     text-align: left;
-  }
+}
+
+.dropdown-button:hover {
+    background-color: #f1f1f1;
+}
 
 /* Style the dropdown menu */
 .dropdown-menu {
