--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,8 @@
             </div>
         </div>
 
-        <div class="main-title">Mancala</div>
+        <div id="main-title">Mancala</div>
+        <br /><br/>
 
         <div id="main-board">
 
@@ -51,6 +52,7 @@
 
         </div>
         <br />
+
         <div id="status">
             {% if winner >= 0 %}<p class="neonText">Player {{ winner + 1 }} wins!</p>{% endif %}
         </div>
