--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Lucian's Mancala Game</title>
-  <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Lucian's Mancala Game</title>
+    <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', path='/favicon.png') }}">
 </head>
 
 <body class="background">
@@ -11,7 +12,7 @@
         <div id="top-menu">
             <a href="/"><div class="top-button">Home</div></a>
             <a href="/reset?session={{ session_id }}&difficulty={{ difficulty }}"><div class="top-button">Reset</div></a>
-            <a href="/"><div class="top-button">About</div></a>
+            <a href="/about?session={{ session_id }}"><div class="top-button">About</div></a>
             <div class="top-dropdown">
                 <button class="dropdown-button">Easy</button>
                 <ul class="dropdown-menu">
