--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -49,61 +49,6 @@
     -webkit-transform: rotate(45deg);
   }
 
-.top-dropdown {
-    float: right;
-    margin-right: 50px;
-    margin-top: 25px;
-    height: 100px;
-    width: 200px;
-    border-radius: 25px;
-}
-
-/* Style the button that opens the dropdown */
-.dropdown-button {
-    background-color: white;
-    color: black;
-    border: 2px solid lightgray;
-    font-size: 24px;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 10px;
-    width: 120px;
-    text-align: left;
-}
-
-.dropdown-button:hover {
-    background-color: #f1f1f1;
-}
-
-/* Style the dropdown menu */
-.dropdown-menu {
-    top: 100%;
-    left: 0;
-    padding: 0;
-    margin: 0;
-    background-color: white;
-    border: 1px solid lightgray;
-    border-top: none;
-    border-radius: 0 0 4px 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    list-style: none;
-    display: none;
-}
-
-/* Style the dropdown menu items */
-.dropdown-menu li {
-    padding: 10px;
-}
-
-.dropdown-menu li a {
-    color: black;
-    text-decoration: none;
-}
-
-.dropdown-menu li:hover {
-    background-color: #f1f1f1;
-}
-
 @font-face {
     font-family: 'dk_jambo-regular';
     src: url('dk_jambo.otf') format('truetype');
@@ -221,17 +166,17 @@
     float: left;
 }
 
-.pit {
-    font-size: 16px;
-    color: white;
-    width: 50px;
-    height: 100px;
-    line-height: 180px;
-    float: left;
-    margin-top: 30px;
-    margin-left: 40px;
-    margin-right: 40px;
-}
+/*.pit {*/
+/*    font-size: 16px;*/
+/*    color: white;*/
+/*    width: 50px;*/
+/*    height: 100px;*/
+/*    line-height: 180px;*/
+/*    float: left;*/
+/*    margin-top: 30px;*/
+/*    margin-left: 40px;*/
+/*    margin-right: 40px;*/
+/*}*/
 
 a {
     text-decoration: none;
@@ -291,4 +236,32 @@ a:hover .pit {
 
 .about-container p a {
   color: #a13961;
+}
+
+.stones-6 {
+    background-image: url('6stones.png');
+}
+
+.stones-5 {
+    background-image: url('5stones.png');
+}
+
+.stones-4 {
+    background-image: url('4stones.png');
+}
+
+.stones-3 {
+    background-image: url('3stones.png');
+}
+
+.stones-2 {
+    background-image: url('2stones.png');
+}
+
+.stones-1 {
+    background-image: url('1stone.png');
+}
+
+.multiple_stones {
+    background-image: url('multiple_stones.png');
 }
