--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -54,16 +54,22 @@
     src: url('dk_jambo.otf') format('truetype');
   }
 
+#center-wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
 #main-board {
     height: 400px;
-    width: 1100px;
-    display: inline-block;
+    max-width: 1100px;
+    width: 100%;
+    display: flex;
     margin: auto 5px;
     background-image: url('board.svg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    padding-left: 50px;
 }
 
 #status {
@@ -89,22 +95,6 @@
       0 0 80px #f09,
       0 0 94px #f09,
       0 0 140px #f09;
-}
-
-.p2-big-pit {
-    height: 170px;
-    width: 70px;
-    float:left;
-    margin-left: 30px;
-    margin-top: 190px;
-}
-
-.p1-big-pit {
-    height: 170px;
-    width: 70px;
-    float:left;
-    margin-left: 5px;
-    margin-top: 90px;
 }
 
 #p1-pit-name {
