Partial changes to backend

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 
         <div id="main-board">
 
-            <div id="p2-big-pit" class="p2-big-pit">
+            <div id="t" class="p2-big-pit">
             <div class="big-pit-value {{ 'blinking selected-pits' if winner == 1 }}">{{ board.players_data[1].big_pit }}</div>
             <div id="p2-pit-name">Player 2</div>
             </div>
